// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component Snapshot should match snapshot for all elevations: card-elevation-lg 1`] = `
<View
  collapsable={false}
  jestAnimatedStyle={
    {
      "value": {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  style={
    {
      "backgroundColor": "#f8f9fa",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 0,
      "elevation": 8,
      "overflow": "hidden",
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text>
    lg
     elevation
  </Text>
</View>
`;

exports[`Card Component Snapshot should match snapshot for all elevations: card-elevation-md 1`] = `
<View
  collapsable={false}
  jestAnimatedStyle={
    {
      "value": {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  style={
    {
      "backgroundColor": "#f8f9fa",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 0,
      "elevation": 4,
      "overflow": "hidden",
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text>
    md
     elevation
  </Text>
</View>
`;

exports[`Card Component Snapshot should match snapshot for all elevations: card-elevation-sm 1`] = `
<View
  collapsable={false}
  jestAnimatedStyle={
    {
      "value": {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  style={
    {
      "backgroundColor": "#f8f9fa",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 0,
      "elevation": 2,
      "overflow": "hidden",
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text>
    sm
     elevation
  </Text>
</View>
`;

exports[`Card Component Snapshot should match snapshot for default card 1`] = `
<View
  collapsable={false}
  jestAnimatedStyle={
    {
      "value": {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  style={
    {
      "backgroundColor": "#f8f9fa",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 0,
      "elevation": 4,
      "overflow": "hidden",
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text>
    Default Card
  </Text>
</View>
`;

exports[`Card Component Snapshot should match snapshot for pressable card: card-pressable 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedStyle={
    {
      "value": {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#f8f9fa",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 0,
      "elevation": 4,
      "overflow": "hidden",
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text>
    Pressable
  </Text>
</View>
`;
